# wagtail-webstories-editor

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml
sandbox/: Dockerfile  requirements.txt
sandbox/home/: models.py
sandbox/home/migrations/: 0003_homepage_image.py  0004_homepage_featured_media.py  0005_webstorylistpage.py
sandbox/sandbox/: api.py  urls.py  wsgi.py
sandbox/sandbox/settings/: base.py  dev.py
sandbox/sandbox/templates/: base.html
sandbox/search/: views.py
wagtail_webstories_editor/: __init__.py  api_viewsets.py  apps.py  models.py  utils.py  views.py  wagtail_hooks.py
wagtail_webstories_editor/migrations/: 0001_initial.py  0002_alter_webstory_title.py  0003_alter_webstory_options.py  0004_webstory_created_at.py  0005_webstoriessetting_webstoriespublisherlogo.py  0006_webstoriespublisherlogo_default.py  0007_webstoriessetting_google_analytics_id.py  0008_webstoriessetting_auto_advance_and_more.py  0009_alter_webstoriessetting_default_page_duration.py  0010_webstoriespublisherlogo_slug.py  0011_remove_webstoriespublisherlogo_slug_webstory_slug.py  0012_alter_webstory_slug.py
wagtail_webstories_editor/templates/wagtail_webstories_editor/: create_webstory.html  edit_side_panels.html  edit_webstory.html  index_webstory.html  story_detail.html
web-stories-editor-react/: package.json  webpack.config.js
web-stories-editor-react/src/: consts.js  dashboard.js  editor.js  serviceWorkerRegistration.js
web-stories-editor-react/src/components/: MediaUpload.js  creationTool.js  updateHandler.js
(+132 files in other folders)
