[metadata]
name = wagtail-webstories-editor
version = 0.0.2
description = Integrate Google Web Stories Editor in Wagtail Projects.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/wagtail-webstories-editor
author = Erick Otenyo
author_email = otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    wagtail>=5.1.2
    django-filter
    wagtailmedia>=0.14.4